--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "antd": "^5.18.3",
+    "classnames": "^2.5.1",
     "less": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
